add api for chrome extension

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -93,7 +93,7 @@
 			},
 			networks: {
 				facebook: {
-					app_id: "309270975792981",
+					app_id: "<%=Facebook::APP_ID%>",
 					title : course_title,
 					caption: "NCTU+ 交大智慧選課系統",
 					description: "",
