change grade to semester and fix search bug

--- a/app/views/course_details/_results.html.erb
+++ b/app/views/course_details/_results.html.erb
@@ -1,4 +1,9 @@
-
+<script>
+$(document).ready(function(){
+	change_degree($("#degree"));
+	$("#q_course_department_id_eq").val('<%=@q.course_department_id_eq%>');
+});
+</script>
 <%= search_form_for @q, class:"form-inline" do |f| %>
 
 <div class="row">
@@ -8,7 +13,7 @@
 		<%= f.select :semester_id_eq, options_from_collection_for_select(Semester.all, "id", "name", @q.semester_id_eq),{:prompt=> "學期"},{ :class=> "form-control",:onchange=>"$('#search').click();"} %>
 	</div>
 	<div class="col-sm-1 no-padding-left">
-		<%= select_tag "degree" ,options_for_select([['大學部','3'],['研究所','2'],['大學部共同','0']]), prompt: "分類", class: "form-control",:onchange=>"" %>
+		<%= select_tag "degree" ,options_for_select([['大學部','3'],['研究所','2'],['大學部共同','0']],params[:degree]), prompt: "分類", class: "form-control",:onchange=>"change_degree($(this))" %>
 	</div>	
 	<div class="col-sm-2 no-padding-left ">
 		<div class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
