--- a/app/views/user/_this_semester.html.erb
+++ b/app/views/user/_this_semester.html.erb
@@ -9,8 +9,9 @@
 		<div  class="col-md-8">
 			<%= render :partial=> "/user/dept_form"%>
 			<h4 id="user_info" class="text-center">
-				<% unless current_user.department.nil? %>
-				<%=current_user.department.ch_name%> <%=current_user.grade.name%> 
+				<% if !current_user.department.nil? && !current_user.semester.nil? %>
+				<%=current_user.department.ch_name%> <%sem=current_user.semester.name%>
+				<%=sem[0..sem.length-2]%>級 
 					<% unless current_user.department.credit.nil? %>
 					畢業學分:<strong><%=current_user.department.credit %></strong>	
 					<% end %>
