--- a/app/views/course_details/_common_js.html.erb
+++ b/app/views/course_details/_common_js.html.erb
@@ -3,16 +3,21 @@
 		obj.next().val("");
 	//	$("#search").click();
 	}
-	$(function(){
+	function change_degree(obj){
 		var dept_sel=[];
 		dept_sel['3']='<%=j options_from_collection_for_select(Department.where(:degree=>'3', :dept_type=>"dept"),'id','ch_name')%>'
 		dept_sel['2']='<%=j options_from_collection_for_select(Department.where(:degree=>'2', :dept_type=>"dept"),'id','ch_name')%>'
 		dept_sel['0']='<%=j options_from_collection_for_select(Department.where(:degree=>['0','5']),'id','ch_name')%>'
-		$("#degree").change(function(){
+		$("#q_course_department_id_eq").html(dept_sel[obj.val()]);
+	}
+	$(function(){
+		//alert("!!!");
+		
+		/*$("#degree").change(function(){
 			
 			$("#q_course_department_id_eq").html(dept_sel[$(this).val()]);
-			$('#search').click();
-		});
+
+		});*/
 		
 		<% if params[:q]&&@cd_all.empty? %>
 			<% if params[:q].fetch(:teacher_name_cont,"").length==2 %>
