--- a/app/views/user/manage.html.erb
+++ b/app/views/user/manage.html.erb
@@ -1,31 +1,36 @@
 ﻿<table class="table">
 <tr>
-<th>Name</th><th>系所</th><th>年級</th><th>狀態</th><th>功能</th>
+<th>Name</th><th>系所</th><th>年級</th><th>身份</th><th>功能</th>
 </tr>
 <%@users.each do |user| %>
 <tr>
-<td><%= user.name %></td>
+<td>
+	<%= image_tag "http://graph.facebook.com/"<<user.uid<<"/picture", size: "25x25" %>
+	<%= link_to user.name, "http://www.facebook.com/"<<user.uid, target:"_blank" %>
+</td>
 <% if user.department_id %>
-<td><%=user.department.ch_name%></td>
+<td>
+	
+	<%=user.department.ch_name%>
+</td>
 <% else %>
 <td>尚未填寫</td>
 <% end %>
-<% if user.grade_id %>
-<td><%= Grade.find(user.grade_id).name %></td>
+<% unless user.semester.nil? %>
+<% sem=user.semester.name%>
+<td><%= sem[0..sem.length-2] %></td>
 <% else %>
 <td>尚未填寫</td>
 <% end %>
 
 <td>
-<% case user.activated %>
-<% when 0 %>登入fb
-<% when 1 %>已填資料
- 
+<% if TopManager.where(:user_id=>user.id).take %>
+	管理員
 <% end %>
 </td>
 <td>
 	<% if !TopManager.where(:user_id=>user.id).take %>
-	<%=link_to "管理員","javascript:void(0);", onclick:"addTopManager(#{user.id})"%>
+	<%=link_to "新增管理員","javascript:void(0);", onclick:"addTopManager(#{user.id})"%>
 	<% else %>
 	
 	<% end %>
