--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,14 +2,14 @@
 	<div class="container" >
 		<p class="navbar-text pull-left footer-text">© 2014 NCTU<sup>+</sup>交大網頁及系統優化小組
 		<a href="#" data-toggle="modal" data-target="#infoModal" style="margin-left:10px;">Contact Us</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;建議使用Chrome或FireFox瀏覽本站
 		</p>
 		
 		<p class="navbar-text pull-right footer-text" >
 			<!--<a href="#">About</a>-->
 			<iframe allowTransparency="true" style="margin-bottom:-2px;overflow:hidden" width="90" height="20" frameborder="0" src='http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fnctuplus&width&layout=button_count&action=like&show_faces=false&share=false&height=21&appId=309270975792981&kid-directed-site=true'></iframe>
 		</p>
-		<!--<a href="http://youtu.be/zJahlKPCL9g" class="navbar-btn btn-danger btn pull-right">
-		<span class="glyphicon glyphicon-star"></span>  Subscribe on YouTube</a>-->
+
 	</div>
 </div>
 
