--- a/app/views/user/_dept_form.html.erb
+++ b/app/views/user/_dept_form.html.erb
@@ -11,13 +11,13 @@
 	<%=select_tag 'dept_under_select', options_for_select(dept_undergrad,current_user.department_id), class:'form-control'%>
 	<%=select_tag 'dept_grad_select', options_for_select(dept_grad,current_user.department_id), class:'form-control'%>
 	</div>
-	<div class="form-group col-md-3 row no-margin-left no-padding-left">
-	<div class="col-md-2 no-padding-left no-padding-right">
+	<div class="form-group col-md-4 row no-margin-left no-padding-left">
+	<div class="col-md-4 no-padding-left no-padding-right">
 	<h4 style="margin-top:8px;">
-	系級
+	入學年度
 	</h4>
 	</div>
-	<div class="col-md-9">
+	<div class="col-md-8">
 	<%=select_tag 'grade_select', options_from_collection_for_select(Semester.all.group(:year).order(:id),:id,:year, current_user.semester_id), class:'form-control'%>
 	</div>
 	</div>
