--- a/app/views/user/import_course.html.erb
+++ b/app/views/user/import_course.html.erb
@@ -6,8 +6,9 @@
 	2.點選「歷年成績查詢」按鈕，如<%=link_to "此圖", asset_path("import_course_1.jpg"), target:"blank"%><br>
 	3.全選(ctrl+a)右方成績頁面的內容並複製(cltr+c)，如<%=link_to "此圖", asset_path("import_course_2.jpg"), target:"blank"%><br>
 	4.貼上至下方表單並送出<br>
-	PS.無法匯入抵免課程、免修課程、聯合大學開授課程<br>
-	PS<sub>2</sub>.系統會判斷該門課是否及格，但我們不會保留您的成績，請放心~
+	PS<sub>1</sub>.必須使用Chrome或FireFox，如用IE會複製到其他字元造成匯入失敗<br>
+	PS<sub>2</sub>.無法匯入抵免課程、免修課程、聯合大學開授課程<br>
+	PS<sub>3</sub>.系統會判斷該門課是否及格，但我們不會保留您的成績，請放心~
 </h4>
 	
 </div>
