--- a/app/views/user/special_list.html.erb
+++ b/app/views/user/special_list.html.erb
@@ -7,7 +7,7 @@
 		
 	});
 </script>
-<% if @cd_all.empty? %>
+<% if @cs_all.empty? %>
 <div class="jumbotron bs-callout bs-callout-info border-info" style="background-color:rgba(0,0,0,0);">
   <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
   <h2>開始使用...</h2>
