--- a/app/views/user/_table_list_by_costype.html.erb
+++ b/app/views/user/_table_list_by_costype.html.erb
@@ -1,66 +1,70 @@
-<table class="table table-hover <%=table_class%>" id="by_cos_type">
-		
-		<% cos_types=[] %>
-		<% credits=[] %>
-		<% cd_mixed.each do |cd|%>
-			<% if !cos_types.include?(cd.cos_type) %>
-				<% cos_types.append(cd.cos_type) %>
-				<tr class="row"><th colspan="3" class="<%=cos_type_class(cd.cos_type)%>"><%=cd.cos_type%></th></tr>
-				<% credits.append(cd.credit.to_i) %>
-			<% else %>
-				<% credits[credits.length-1]+=cd.credit.to_i %>
-			<% end %>
-		<tr class="row">
-		<td class="col-md-6">
-			<h4 class="text-center"><%= link_to cd.course.ch_name, course_path(cd.course, :tid=>cd.teacher.id) %>
-				<%= link_to cd.temp_cos_id, "https://cos.adm.nctu.edu.tw/Course/CrsOutline/show.asp?Acy="<<cd.semester.year<<"&Sem="<<cd.semester.half<<"&CrsNo="<<cd.temp_cos_id, :target=>"_blank" %> | 
-				
-				<%=cd.teacher.name %> | 
-				<%= fa_icon "user" %> <strong><%=CourseSimulation.where(:course_detail_id=>cd.id).count%></strong> | 
-				<%= fa_icon "graduation-cap" %> <strong><%=cd.credit%></strong>
-				</h4>
-			</td>
-			<td class="col-md-6">
-			<div class="container" style="display:inline-block;">
-				<%ct=cd.course_teachership%>
-				<%= link_to "考古題", course_path(cd.course, :tid=>cd.teacher.id, :first_show=>"files"), :class=>"btn btn-md btn-default" %>
-				<% if ct.file_infos.count>0 %>
-				<div class="number-right-top" ><p style="margin-left:-1px"><%=ct.file_infos.count%></p></div>
-				<% end %>
-				<%= link_to "討論區", course_path(cd.course, :tid=>cd.teacher.id, :first_show=>"discussion"), :class=>"btn btn-md btn-default" %>
-				<% if ct.discusses.count>0 %>
-				<div class="number-right-top" ><p style="margin-left:-1px"><%=ct.discusses.count%></p></div>
-				<% end %>
-			</div>
+<table class="table table-hover <%=table_class%>" id="by_semester">
+	<% pass_score=current_user.department.degree=='2' ? 70 : 60 %>
 
-			</td>
-		</tr>
+	<% cs_mixed.group_by{|cs| cs.course_detail.cos_type}.each do |type,cs_local| %>
+		<tr class="row"><th colspan="3" class="<%=cos_type_class(type)%>"><%=type%></th></tr>
+		<% credit_sum=0 %>
+		<% cs_local.each do |cs| %>
+			
+			
+			<% if cs.score=="通過" || cs.score.to_i>=pass_score %>
+			<% credit_sum+=cs.course_detail.credit.to_i %>
+			
+			<%pass_class=""%>
+			<% else %>
+				<%pass_class="danger"%>
+			<% end %>
+			
+			<tr class="row <%=pass_class%>">
+				<td class="col-md-6">
+					<h4 class="text-center"><%= link_to cs.course.ch_name, course_path(cs.course, :tid=>cs.teacher.id) %>
+						<%= link_to cs.course_detail.temp_cos_id, "https://cos.adm.nctu.edu.tw/Course/CrsOutline/show.asp?Acy="<<cs.semester.year<<"&Sem="<<cs.semester.half<<"&CrsNo="<<cs.course_detail.temp_cos_id, :target=>"_blank" %> | 					
+						<%=cs.teacher.name %> | 
+						<%= fa_icon "user" %> <strong><%=CourseSimulation.where(:course_detail_id=>cs.course_detail.id).count%></strong> | 
+						<%= fa_icon "graduation-cap" %> <strong><%=cs.course_detail.credit%></strong>
+					</h4>
+				</td>
+				<td class="col-md-6">
+					<%ct=cs.course_teachership%>
+					<div class="container" style="display:inline-block;">		
+						<%= link_to "考古題", course_path(cs.course, :tid=>cs.teacher.id, :first_show=>"files"), :class=>"btn btn-sm btn-default" %>
+						<div class="number-right-top" ><%=ct.file_infos.count%></div>
+						<%= link_to "討論區", course_path(cs.course, :tid=>cs.teacher.id, :first_show=>"discussion"), :class=>"btn btn-sm btn-default" %>
+						<div class="number-right-top" ><%=ct.discusses.count%></div>
+					</div>
+				</td>
+			</tr>
 		<% end %>
+	<% end %>
+	<% if table_class=="this_sem_table"%>
 	<tr class="row success">
-		<td colspan="2">
-			<h4 class="text-right">
-				<%cos_all=cos_types.zip(credits)%>
-				
-				<% cos_all.each do |t,c| %>
-					<%= t %> : <strong><%=c%></strong>		
+		<td colspan="2" >
+			<h4 class="text-left">
+				目前學分:
+				<%this_credit_sum=0%>
+				<% @cs_this.group_by{|cs| cs.course_detail.cos_type}.each do |type,cs_all| %>
+					<% credit=cs_all.map{|cs|cs.course_detail.credit.to_i}.reduce(:+)%>
+						<%=type%> : <strong><%=credit%></strong>
+					<%this_credit_sum+=credit%>
 				<% end %>
-				共 <strong><%= cd_mixed.count %></strong> 門課 <strong><%=credits.reduce(:+) %></strong> 學分
+					共 <strong><%=@cs_this.count%></strong> 門課 <strong><%=this_credit_sum%></strong> 學分
+			</h4>
+		</td>
+	</tr>
+	<% end %>
+	<tr class="row label-info">
+		<td colspan="2" >
+			<h4 class="text-right">
+				目前學分:
+				<%all_credit_sum=0%>
+				<% @cs_all_passed.group_by{|cs| cs.course_detail.cos_type}.each do |type,cs_all| %>
+					<% credit=cs_all.map{|cs|cs.course_detail.credit.to_i}.reduce(:+)%>
+						<%=type%> : <strong><%=credit%></strong>
+					<%all_credit_sum+=credit%>
+				<% end %>
+					共 <strong><%=@cs_all_passed.count%></strong> 門課 <strong><%=all_credit_sum%></strong> 學分
 			</h4>
 		</td>
 	</tr>
 	
-	<!--<tr class="row label-info">
-		<td colspan="2" class="info">
-			<h4 class="text-right">
-			
-				目前學分: <strong><%=@cd_all_sum%></strong>
-				<% @cd_all_cos_type_credit.each do |type,credit| %>
-					<%=type%> : <strong><%=credit.round%></strong>
-				<% end %>
-				<% if !current_user.department.nil?&&!current_user.department.credit.nil? %>
-				離畢業還差 <strong><%=current_user.department.credit-@cd_all_sum%></strong> 學分
-				<% end %>
-			</h4>
-		</td>
-	</tr>-->
 </table>
