--- a/app/views/user/_this_semester.html.erb
+++ b/app/views/user/_this_semester.html.erb
@@ -11,7 +11,9 @@
 			<h4 id="user_info" class="text-center">
 				<% if !current_user.department.nil? && !current_user.semester.nil? %>
 				<%=current_user.department.ch_name%> <%sem=current_user.semester.name%>
-				<%=sem[0..sem.length-2].to_i+4%>級 
+				<% if current_user.department.degree=="3" %>
+					<%=sem[0..sem.length-2].to_i+4%>級 
+				<% end %>
 					<% unless current_user.department.credit.nil? %>
 					畢業學分:<strong><%=current_user.department.credit %></strong>	
 					<% end %>
@@ -31,7 +33,7 @@
 		</div>
 	</div>
 	<br>
-	<%= render :partial=>"/user/table_list_by_costype", locals: {cd_mixed: @cd_this, table_class:"this_sem_table"} %>
+	<%= render :partial=>"/user/table_list_by_costype", locals: {cs_mixed: @cs_this, table_class:"this_sem_table"} %>
 </div>
 
 
